2013-10-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Adjust FilterHtml::GetNextToken() to prevent overflow.

	* src/filterhtml.cpp (FilterHtml::GetNextToken):
	  - Check for token size before writing to prevent buffer overflow.

2013-10-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Adjust FilterX::GetNextToken() for more safety.

	* src/filterx.h, src/filterhtml.h, src/filterlatex.h, src/filterrtf.h,
	  src/filterhtml.cpp, src/filterlatex.cpp, src/filterrtf.cpp,
	  (FilterX::GetNextToken):
	  - Add 'tokenSz' arg so that buffer overflow can be prevented.
	* src/wordseg.cpp (main):
	  - Adjust call to FilterX::GetNextToken() accordingly.

	* src/filterlatex.cpp (FilterLatex::GetNextToken):
	  - Implement the adjusted interface to make sure 'token' is never
	    overflown when writing data.
	* src/Makefile.am, +src/utils.h:
	  - Add "utils.h" for utility functions (first used in
	    FilterLatex::GetNextToken()).
	* src/convutil.h, src/utils.h, src/wordseg.cpp (N_ELM):
	  - Move N_ELM() macro from convutil.h to utils.h.

2013-10-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Update dictionary from thailatex SVN.

	* data/tdict-common.txt:
	* data/tdict-district.txt:
	* data/tdict-geo.txt:
	* data/tdict-history.txt:
	* data/tdict-ict.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-spell.txt:
	* data/tdict-std-compound.txt:
	* data/tdict-std.txt:
	  - Update dictionary from dehyphenated source for thailatex
	    hyphenation patterns.

2013-10-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix automake warnings.

	* src/Makefile.am:
	  - Replace deprecated INCLUDES with AM_CPPFLAGS.

2013-05-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Lambda's word break should be ZWSP (U+200B).

	* src/filterlambda.h (FilterLambda::FilterLambda):
	  - Change wbr default arg from '^^^^200c' to '^^^^200b'.
	* src/wordseg.cpp (Usage):
	  - Fix text explaining Lambda's word break.
